fix alignment issue when only one portfolio entry

--- a/src/components/portfolio.css
+++ b/src/components/portfolio.css
@@ -6,7 +6,8 @@
 .portfolio {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
+  /*justify-content: flex-start;*/
 }
 
 .pie-chart {
